--- a/BookingCostCalculator.Application/BookingCostCalculator.Application.csproj
+++ b/BookingCostCalculator.Application/BookingCostCalculator.Application.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="MediatR" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.1" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.1" />
     </ItemGroup>
 
